--- a/index.html
+++ b/index.html
@@ -43,16 +43,18 @@
         background: #fff;
         border-radius: 20px;
         box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
-        padding: 2rem;
+        padding: 1.3rem;
         max-width: 400px;
         margin: 1rem;
         animation: fadeIn 2s ease-in-out;
         position: relative;
         z-index: 5;
+        /* margin-bottom: 10px; */
       }
       h1 {
         font-size: 2rem;
         color: #e75480;
+        margin-top: 0;
       }
       h2 {
         font-size: 1.2rem;
@@ -60,8 +62,8 @@
         color: #6b3e26;
       }
       .image-placeholder {
-        height: 300px;
-        width: 65%;
+        height: 266px;
+        width: 200px;
         background: #f8d7da;
         border-radius: 15px;
         margin-bottom: 1rem;
@@ -156,7 +158,7 @@
       <h1>🎉 Happy Birthday <span id="name">Nadha Fathimaa..</span> 🎂</h1>
       <h2>A Day as Sweet as Chocolate 🍫 & Fresh as Strawberries 🍓</h2>
       <div class="image-placeholder">
-        <img src="imgs/pic.jpg" alt="image">
+        <img src="imgs/pic.jpg" alt="image" />
       </div>
       <p class="wish">
         Wishing you endless happiness, laughter, and magical moments today and
