--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        flex-direction: column;
-        text-align: center;
         min-height: 100vh;
-        overflow: hidden;
+        text-align: center;
         position: relative;
         font-family: cursive;
+        overflow: hidden;
       }
+
       .floating-icon {
         position: absolute;
         font-size: 1.5rem;
@@ -39,18 +39,19 @@
           opacity: 0;
         }
       }
+
       .card {
+        top: -60px;
         background: #fff;
         border-radius: 20px;
         box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
-        padding: 0.8rem;
-        max-width: 400px;
-        margin: 1rem;
+        padding: 1rem 1.5rem;
+        max-width: 290px;
         animation: fadeIn 2s ease-in-out;
         position: relative;
         z-index: 5;
-        /* margin-bottom: 10px; */
       }
+
       h1 {
         font-size: 2rem;
         color: #e75480;
@@ -61,15 +62,15 @@
         margin-bottom: 1.5rem;
         color: #6b3e26;
       }
+
       .image-placeholder {
         height: 266px;
         width: 200px;
         background: #f8d7da;
         border-radius: 15px;
-        margin-bottom: 1rem;
+        margin: 0 auto 1rem;
         display: flex;
         align-items: center;
-        margin: 0 auto 1rem;
         justify-content: center;
         font-size: 0.9rem;
         color: #555;
@@ -80,12 +81,14 @@
         object-fit: cover;
         border-radius: 15px;
       }
+
       .wish {
         font-size: 1rem;
         line-height: 1.5;
         margin: 1rem 0;
         color: #444;
       }
+
       button {
         background: linear-gradient(45deg, #e75480, #6b3e26);
         color: white;
@@ -99,6 +102,7 @@
       button:hover {
         transform: scale(1.1);
       }
+
       .confetti {
         position: fixed;
         top: 0;
@@ -117,6 +121,7 @@
         opacity: 0.7;
         animation: fall linear forwards;
       }
+
       @keyframes fadeIn {
         from {
           opacity: 0;
@@ -127,12 +132,14 @@
           transform: translateY(0);
         }
       }
+
       @keyframes fall {
         to {
           transform: translateY(100vh) rotate(720deg);
           opacity: 0;
         }
       }
+
       @media (min-width: 600px) {
         h1 {
           font-size: 2.5rem;
