--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         max-width: 290px;
         animation: fadeIn 2s ease-in-out;
         position: relative;
+        top: -30px;
         z-index: 5;
       }
 
